# Neuraal_Netwerk_Project

./: .gitattributes  .gitignore  CNN_model.ipynb  CalorieTracker.ipynb  ClassificatieModel.ipynb  HouseMD_bot.ipynb  NLP_model.ipynb  pyproject.toml
Getrainde_modellen/: CNN_Model_gewichten.pth  Classificatie_Model_gewichten.pth  NLP_Model_gewichten.pth
Getrainde_modellen/HouseMD_model/: HouseMD_Model_gewichten.pth
Getrainde_modellen/HouseMD_model/logs/: events.out.tfevents.1743417403.Boris-PC.31472.1  events.out.tfevents.1743417519.Boris-PC.31208.0  events.out.tfevents.1743417562.Boris-PC.31208.1  events.out.tfevents.1743417573.Boris-PC.31208.2  events.out.tfevents.1743417654.Boris-PC.24188.0  events.out.tfevents.1743419742.Boris-PC.31272.0  events.out.tfevents.1743420660.Boris-PC.14320.0  events.out.tfevents.1743420737.Boris-PC.14320.1  events.out.tfevents.1743421365.Boris-PC.14320.2  events.out.tfevents.1743422126.Boris-PC.3172.0  events.out.tfevents.1743422198.Boris-PC.3172.1  events.out.tfevents.1743422975.Boris-PC.3172.2  events.out.tfevents.1743423736.Boris-PC.3172.3  events.out.tfevents.1743424714.Boris-PC.3172.4  events.out.tfevents.1743425655.Boris-PC.3172.5  events.out.tfevents.1743434657.Boris-PC.3172.6  events.out.tfevents.1743436905.Boris-PC.3172.7  events.out.tfevents.1744366063.Boris-PC.5068.0  events.out.tfevents.1744366896.Boris-PC.5848.0  events.out.tfevents.1744367447.Boris-PC.5848.1  events.out.tfevents.1744368075.Boris-PC.5848.2  (+6 more)
Google_drive/: credentials.txt  drive_manager.py
Overig/: drive_manager.py
Scripts/: Google_conn.py
